lang/examples/good/00-01-fibonacci.wdr
fun main(): Void {
  printInt(fib(42));
  
  return;
}

fun fib(n: Int): Int {
  if (n == 0) {
    return 1;
  }

  return fib(n - 1) + fib(n - 2);
}