lang/examples/bad/17-01-lambda.wdr
fun main(): Void {
  var a: (Int) -> Int = (parameter: Int): Int => {
    return parameter + 1;
  };

  return;
}